# 2.03.02 (55365) Aug 16, 2011
> Fixed: After crashing, an object's path doesn't disappear
Changed MassReadoutNode to use Not instead of SettableNot, see #3045
# 2.03.01 (55272) Aug 15, 2011
> Fixed: After selecting "Reset All" sim starts with "Pause" rather than "Play" button, resolves #3032
# 2.03.00 (53422) Jun 23, 2011
# 2.02.01 (53349) Jun 22, 2011
> Fixed: "moon" text label is invisible when the background is switched to white, see #2948
# 2.02.00 (53172) Jun 15, 2011
# 2.01.02 (53171) Jun 15, 2011
Fixed: velocity vectors still show after collision occurs
# 2.01.01 (53157) Jun 14, 2011
> Fixed for Mac OS X 10.4 crashes, see #2913
> 5/24/11 Refactored Gravity and Orbits to use TextButtonNode and bugfixes for HTMLImageButtonNode, see #2902
> Changed images for moon and space station
Removed unused earth.png image
Removed workaround for invalidation when changing canvas since it is solved in Module, see #2812
# 2.01.00 (50921) Apr 20, 2011
# 2.00.02 (50902) Apr 20, 2011
> Fixed: the "reset" button should restart the clock at 0
Removed unused strings
# 2.00.01 (50878) Apr 19, 2011
> Increased precision of the numerical integration because "to scale" Sun/Earth/Moon orbit is unstable (growing)
# 2.00.00 (50873) Apr 19, 2011
# 1.00.26 (50854) Apr 19, 2011
> Changed clock time reset button from "Reset" to "Clear"
Handled issues for the code review, including some refactoring, see #2801
# 1.00.25 (50657) Apr 14, 2011
Fixed: mass labels appear in the wrong location when initially shown
Added docs and minor refactors for some issues in code review
# 1.00.24 (50589) Apr 12, 2011
> Made the 1 grid spacing the earth-satellite distance in Earth/Satellite mode
# 1.00.23 (50566) Apr 12, 2011
Fixed time readout scale factor for cartoon Sun/Earth/Moon
# 1.00.22 (50564) Apr 12, 2011
Switch cartoon Sun/Earth mode to use same parameters as cartoon Sun/Earth/Moon mode, but with a different time readout scale factor
# 1.00.21 (50558) Apr 12, 2011